# controld

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
cmake/: Config.cmake
dbus/: CMakeLists.txt  Controls.xml.in  Functions.xml.in  Policy.conf.in  Service.service.in
git/hooks/: pre-commit
src/: CMakeLists.txt  DBusService.c  DBusService.h  KeyboardsSource.c  KeyboardsSource.h  config.h.in  main.c
systemd/: CMakeLists.txt  Service.service.in
